hw3.master flipper, skills, parallax are done

--- a/about.html
+++ b/about.html
@@ -114,33 +114,33 @@
                   <ul class="c-skills-list">
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">HTML5</div>
                       </div>
                     </li>
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">CSS3</div>
                       </div>
                     </li>
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">JavaScript &amp; jQuery</div>
                       </div>
@@ -150,66 +150,66 @@
                   <ul class="c-skills-list">
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">PHP &amp; Laravel</div>
                       </div>
                     </li>
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">mySQL</div>
                       </div>
                     </li>
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">Node.js &amp; npm</div>
                       </div>
                     </li>
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">Mongo.db</div>
                       </div>
                     </li>
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">C#</div>
                       </div>
                     </li>
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">SQL Server</div>
                       </div>
@@ -219,44 +219,44 @@
                   <ul class="c-skills-list">
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">Git</div>
                       </div>
                     </li>
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">Gulp</div>
                       </div>
                     </li>
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">Webpack</div>
                       </div>
                     </li>
                     <li class="c-skills-list__item">
                       <div class="c-skill">
-                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_inner" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
-                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="80% 100%" viewBox="0 0 100 100" preserveAspectRatio="none">
-                          <circle cx="50" cy="50" r="40"></circle>
+                        <svg class="c-skill__circle c-skill__circle_outer" stroke-dasharray="65 100" viewBox="0 0 40 40" preserveAspectRatio="none" stroke-alignment="inner">
+                          <circle cx="20" cy="20" r="16"></circle>
                         </svg>
                         <div class="c-skill__title">Artisan</div>
                       </div>
