--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="./assets/css/foundation.css">
     <link rel="stylesheet" href="./assets/css/app.css">
     <script src="./assets/js/foundation.js" defer></script>
-    <script src="./assets/js/app.js" defer></script><!--[if lt IE 9]>
+    <script src="./assets/js/app.js" defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTr9X90RHtYA8AL0P-ho9pWtPlZEKhWTU&amp;callback=initMap" defer></script><!--[if lt IE 9]>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -20,7 +21,8 @@
     <!--block section3-->
     <div class="wrapper">
       <section class="l-section l-welcome">
-        <div class="l-parallax__bg"></div><a class="l-welcome__auth-btn" data-flip="toggle" href="#">Авторизоваться</a>
+        <div class="l-parallax__bg"></div>
+        <video class="l-video__bg" src="./assets/img/night.mp4" controls="controls" autoplay="autoplay" loop="loop"></video><a class="l-welcome__auth-btn" data-flip="toggle" href="#">Авторизоваться</a>
         <div class="l-flipper">
           <div class="l-frame-wrapper l-frame-wrapper_welcome">
             <div class="c-frame">
