--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="./assets/css/foundation.css">
     <link rel="stylesheet" href="./assets/css/app.css">
     <script src="./assets/js/foundation.js" defer></script>
-    <script src="./assets/js/app.js" defer></script><!--[if lt IE 9]>
+    <script src="./assets/js/app.js" defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTr9X90RHtYA8AL0P-ho9pWtPlZEKhWTU&amp;callback=initMap" defer></script><!--[if lt IE 9]>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -52,6 +53,9 @@
                     </svg>
         </header>
         <div class="l-parallax__bg"></div>
+        <div class="c-stars"></div>
+        <div class="c-twinkling"></div>
+        <div class="c-clouds"></div>
         <div class="l-developer__container">
           <!--+svg('c-developer__bg',`stars1`)-->
           <svg class="c-developer__bg">
@@ -292,7 +296,7 @@
             </ul>
           </div>
         </div>
-        <div class="l-map__widget"></div>
+        <div class="l-map__widget" id="map"></div>
         <footer class="c-footer">
           <ul class="c-footer-list">
             <div class="c-footer-list__item c-footer-list__item_first">
