--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
     <!--block section1-->
     <!--block section2-->
     <!--block section3-->
+    <div class="preloader">
+      <div class="preloader__container">
+        <div class="preloader__spinner"></div>
+        <div class="preloader__value" data-unit="%">0</div>
+      </div>
+    </div>
     <div class="wrapper">
       <section class="l-section l-welcome">
         <div class="l-parallax__bg"></div>
-        <video class="l-video__bg" src="./assets/img/night.mp4" controls="controls" autoplay="autoplay" loop="loop"></video><a class="l-welcome__auth-btn" data-flip="toggle" href="#">Авторизоваться</a>
+        <!--video.l-video__bg(src="./assets/img/night.mp4" controls="controls" autoplay="autoplay" loop="loop")-->
+        <div class="c-stars c-stars-parallax__layer"></div>
+        <div class="c-twinkling"></div>
+        <div class="c-clouds c-stars-parallax__layer"></div><a class="l-welcome__auth-btn" data-flip="toggle" href="#">Авторизоваться</a>
         <div class="l-flipper">
           <div class="l-frame-wrapper l-frame-wrapper_welcome">
             <div class="c-frame">
