--- a/blog.html
+++ b/blog.html
@@ -44,20 +44,22 @@
                               </svg></a></li>
             </ul>
           </div>
-          <div class="c-menu-wrapper c-menu-wrapper_main">
-            <nav class="c-menu">
-              <ul class="c-menu-list">
-                <li class="c-menu-list__item"><a class="c-menu-list__link" href="works.html">Мои работы</a></li>
-                <li class="c-menu-list__item"><a class="c-menu-list__link" href="about.html">Обо мне</a></li>
-                <li class="c-menu-list__item"><a class="c-menu-list__link" href="blog.html">Блог</a></li>
-                <li class="c-menu-list__item"><a class="c-menu-list__link" href="index.html">Авторизация</a></li>
-              </ul>
-            </nav>
-                      <svg class="c-menu-icon">
-                        <use xlink:href="./assets/img/sprite.svg#hamburger"></use>
-                      </svg>
-          </div>
         </header>
+        <div class="c-menu-wrapper c-menu-wrapper_main">
+          <nav class="c-menu">
+            <ul class="c-menu-list">
+              <li class="c-menu-list__item"><a class="c-menu-list__link" href="works.html">Мои работы</a></li>
+              <li class="c-menu-list__item"><a class="c-menu-list__link" href="about.html">Обо мне</a></li>
+              <li class="c-menu-list__item"><a class="c-menu-list__link" href="blog.html">Блог</a></li>
+              <li class="c-menu-list__item"><a class="c-menu-list__link" href="index.html">Авторизация</a></li>
+            </ul>
+          </nav>
+          <div class="c-menu-icon">
+            <div class="c-menu-icon__line"></div>
+            <div class="c-menu-icon__line"></div>
+            <div class="c-menu-icon__line"></div>
+          </div>
+        </div>
         <div class="l-parallax__bg"></div>
         <div class="c-stars c-stars-parallax__layer"></div>
         <div class="c-twinkling"></div>
@@ -71,10 +73,10 @@
             <div class="c-section-title c-section-title_blog">Блог</div>
             <div class="c-user__occupation">Cтатьи, которые я написал</div>
           </div>
-        </div><a class="c-section__btn" href="#section2">
-                    <svg class="c-section__icon">
-                      <use xlink:href="./assets/img/sprite.svg#arrow_down"></use>
-                    </svg></a>
+        </div><a class="c-section__btn" data-move="next">
+                  <svg class="c-section__icon">
+                    <use xlink:href="./assets/img/sprite.svg#arrow_down"></use>
+                  </svg></a>
       </section>
       <section class="l-section l-blog" id="section2">
         <svg class="c-section__triangle c-section__triangle_color_beiger" viewBox="0 0 2000 110" preserveAspectRatio="none">
@@ -83,9 +85,9 @@
         <div class="c-blog">
           <aside class="c-blog-sidebar">
             <ul class="c-blog-sidebar__list">
-              <li class="c-blog-sidebar__item"><a class="c-blog-sidebar__link" href="#">Самое важное в SASS</a></li>
-              <li class="c-blog-sidebar__item"><a class="c-blog-sidebar__link" href="#">Почему я выбрал Pug</a></li>
-              <li class="c-blog-sidebar__item"><a class="c-blog-sidebar__link" href="#">Особенности Webpack</a></li>
+              <li class="c-blog-sidebar__item active"><a class="c-blog-sidebar__link" href="#article1">Самое важное в SASS</a></li>
+              <li class="c-blog-sidebar__item"><a class="c-blog-sidebar__link" href="#article2">Почему я выбрал Pug</a></li>
+              <li class="c-blog-sidebar__item"><a class="c-blog-sidebar__link" href="#article3">Особенности Webpack</a></li>
             </ul>
             <div class="c-blog-sidebar__button">
               <svg class="c-blog-sidebar__icon" viewBox="0 0 8 40">
@@ -95,7 +97,7 @@
           </aside>
           <div class="c-articles">
             <ul class="c-articles__list">
-              <li class="c-article">
+              <li class="c-article" data-id="article1">
                 <div class="c-article__title c-block-title c-block-title_pure">Самое важное в SASS</div>
                 <div class="c-article__date">15 февраля 2017</div>
                 <div class="c-article__content c-block-text">
@@ -103,7 +105,7 @@
                   <p>Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.</p>
                 </div>
               </li>
-              <li class="c-article">
+              <li class="c-article" data-id="article2">
                 <div class="c-article__title c-block-title c-block-title_pure">Почему я выбрал Pug</div>
                 <div class="c-article__date">10 февраля 2017</div>
                 <div class="c-article__content c-block-text">
@@ -111,7 +113,7 @@
                   <p>Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.</p>
                 </div>
               </li>
-              <li class="c-article">
+              <li class="c-article" data-id="article3">
                 <div class="c-article__title c-block-title c-block-title_pure">Особенности Webpack</div>
                 <div class="c-article__date">21 января 2017</div>
                 <div class="c-article__content c-block-text">
